syntax = "proto2";

package rwsql.validation.proto;

message RWSync {
  required uint32 num_ops = 1;
  required bool read_only = 2;
  required bool read_secondary_condition = 3;
  required int32 value_size = 4; 
  required uint64 value_categories = 5;
  required uint64 max_random_size = 6;
  required bool scan_as_point = 7;
  required bool exec_point_scan_parallel = 8;
}